# Proyecto2-IoT

./: .gitignore  README.md  index.html  pyproject.toml  vite.config.ts
.github/workflows/: deploy.yml
arduino-esp32/: Ejemplo de lo que tira la ESP32 en.txt  Proyecto2-Obi.ino
gateway/: app.py  config.py  data_store.py  mqtt_client.py  subscriber.py
node-red/: Flujos Node-Red explicados.txt  flows.json
src/app/: App.tsx
src/app/components/: ActuatorCard.tsx  SensorGauge.tsx  TemperatureChart.tsx
tests-API/: Lo que me imprimió la API.txt
