[project]
name = "proyecto2-iot"
version = "0.1.0"
description = ""
authors = [
    {name = "RobertoYB",email = "ryupit26@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "flask (>=3.1.3,<4.0.0)",
    "flask-cors (>=6.0.2,<7.0.0)",
    "paho-mqtt (>=2.1.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
